  `<jdbc:embedded-database>`, allowing developers to set unique names
  for embedded databases –- for example, via a SpEL expression or a
  property placeholder that is influenced by the current active bean
  definition profiles.
* Embedded databases can now be automatically assigned a unique name,
  allowing common test database configuration to be reused in different
  ++ApplicationContext++s within a test suite.
** See <<jdbc-embedded-database-unique-names>> for details.
* `MockHttpServletRequest` and `MockHttpServletResponse` now provide better
  support for date header formatting via the `getDateHeader` and `setDateHeader`
  methods.



[[new-in-4.3]]
== New Features and Enhancements in Spring Framework 4.3

=== Core Container Improvements

* It is no longer necessary to specify the `@Autowired` annotation if the target
  bean only define one constructor.
* `@Configuration` classes support constructor injection.
* Any SpEL expression used to specify the `condition` of an `@EventListener` can
  now refer to beans (i.e. `@beanName.method()`).

=== Caching Improvements

Spring 4.3 allows concurrent calls on a given key to be synchronized so that the
value is only computed once. This is an opt-in feature that should be enabled via
the new `sync` attribute on `@Cacheable`. This features introduces a breaking
change in the `Cache` interface as a `get(Object key, Callable<T> valueLoader)`
method has been added.

Spring 4.3 also improves the caching abstraction as follows:

* SpEL expressions in caches-related annotations can now refer to beans (i.e.
  `@beanName.method()`).
* `ConcurrentMapCacheManager` and `ConcurrentMapCache` now support the serialization
  of cache entries via a new `storeByValue` attribute.

=== Web Improvements

* New `@RestControllerAdvice` annotation combines `@ControllerAdvice` with `@ResponseBody`.

=== Testing Improvements

* The JUnit support in the _Spring TestContext Framework_ now requires JUnit 4.12 or higher.